--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149455548-2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-149455548-2');
-	</script>
-    <meta http-equiv="refresh" content="5; url=https://www.linkedin.com/in/duplabe/">
+    <meta http-equiv="refresh" content="0; url=https://duplabe.com">
 </head>
 <body>
-    <a href="https://www.linkedin.com/in/duplabe/">linkedin.com/duplabe/</a>
+    <a href="duplabe.com">duplabe.com</a>
 </body>
 </html>
